--- a/ansible/play.yml
+++ b/ansible/play.yml
@@ -1,5 +1,16 @@
 ---
-- hosts: droplets
-  user: vagrant
+- name: Vagrant only
+  hosts: vagrant
+  vars:
+    host: "messages.services.steiner.vagrant"
+
+- name: Production only
+  hosts: vagrant
+  vars:
+      host: "messages.services.steiner.ch"
+
+- name: Generic
+  hosts: servers
   roles:
-    - role: apache
+    - role: base-system
+    - role: lamp
