--- a/ansible/roles/apache/handlers/main.yml
+++ b/ansible/roles/apache/handlers/main.yml
@@ -1,3 +1,10 @@
 ---
 - name: start apache
-  service: name=apache2 state=started
+  service:
+    name=apache2
+    state=started
+
+- name: restart apache
+  service:
+    name=apache2
+    state=restarted
