--- a/ansible/roles/apache/templates/apache_vhost.conf
+++ b/ansible/roles/apache/templates/apache_vhost.conf
@@ -1,16 +1,16 @@
 <VirtualHost *:80>
-    ServerName {{ item.servername }}
-    DocumentRoot /var/www/{{ item.servername }}/{{ item.relDestDir }}
-    ServerAdmin {{ item.serveradmin }}
-    ErrorLog /var/log/apache2/{{ item.servername }}/error.log
-    CustomLog /var/log/apache2/{{ item.servername }}/access.log common
+    ServerName {{ vhost_servername }}
+    DocumentRoot /var/www/{{ vhost_servername }}/{{ vhost_relDestDir }}
+    ServerAdmin {{ vhost_serveradmin }}
+    ErrorLog /var/log/apache2/{{ vhost_servername }}/error.log
+    CustomLog /var/log/apache2/{{ vhost_servername }}/access.log common
 
-    <Directory /var/www/{{ item.servername }}/{{ item.relDestDir }}>
+    <Directory /var/www/{{ vhost_servername }}/{{ vhost_relDestDir }}>
         Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
     </Directory>
 
-{% include "files/apache/mod_rewrite/" + item.servername + ".conf" ignore missing %}
+{% include "files/apache/mod_rewrite/" + vhost_servername + ".conf" ignore missing %}
 
 </VirtualHost>
