--- a/ansible/roles/apache/vars/main.yml
+++ b/ansible/roles/apache/vars/main.yml
@@ -1,5 +1,5 @@
-apache_vhosts:
-  - servername: "vhost1.example.com"
-    serveradmin: "support@websoft.ch"
-    sourceDir : "/example"
-    relDestDir : "public"
+---
+#vhost_servername: "example.websoft.vagrant" -> needs to be set in group_vars
+#vhost_sourceDir : "/message-service" -> needs to be set in group_vars
+vhost_serveradmin: "support@websoft.ch"
+vhost_relDestDir : "public"
